Added some more configuration and skeleton things

--- a/poe-boss-drops/src/main/resources/application.properties
+++ b/poe-boss-drops/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+spring.cloud.gcp.sql.instance-connection-name=${CONNECTION_NAME}
+spring.cloud.gcp.sql.database-name=poe-boss-tracker
 
+# Configure username/password
+spring.datasource.username=${POSTGRES_PID}
+spring.datasource.password=${POSTGRES_PASSWORD}
+
+# Configure connection pooling if needed
+spring.datasource.hikari.maximum-pool-size=10
