--- a/poe-boss-drops/pom.xml
+++ b/poe-boss-drops/pom.xml
@@ -45,6 +45,12 @@
 			<scope>provided</scope>
 		</dependency>
 
+		<!-- Apache Utils-->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.12.0</version>
+		</dependency>
 
 		<!-- Testing -->
 		<dependency>
